<resources>

    <!-- GLOBAL STRINGS -->
    <string name="app_name">Fulltopia</string>
    <string name="BTN_return">Return</string>
    <string name="Welcome">Welcome to Fulltopia</string>
    <string name="Activities">Activities</string>
    <string name="Communities">Communities</string>
    <string name="Description">Description :</string>

    <!-- activity_settings layout -->
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="GetNotif">Receive notifications?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Address">Address</string>
    <string name="Street">Street</string>
    <string name="NPA">NPA</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="Save">Save</string>
    <string name="login">Login</string>
    <string name="emailpassword_title_text">Email/password</string>
    <string name="desc_firebase_lockup">Firebase</string>
    <string name="signed_out">Siegned Out</string>
    <string name="sign_in">Sign-in</string>
    <string name="create_account">Creat an account</string>
    <string name="sign_out">Sign-out</string>
    <string name="verify_email">Verify email</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="google_title_text">Google</string>
    <string name="disconnect">Disconnect</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Fulltopia now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_communities">CommunitiesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_activities">ActivitiesActivity</string>
    <string name="btn_chg_language">Change language</string>
    <string name="btn_chg_notification">Notifications</string>
    <string name="btn_chg_address">Change Adress</string>
    <string name="btn_send_feedback">Feedback about the app</string>
    <string name="send_feedback">Send us a feedback</string>
    <string name="send_feedback_btn">Send</string>


    <!-- activity community layout -->
    <string name="community_name">Name*</string>
    <string name="community_description">Description*</string>
    <string name="community_address">Address</string>
    <string name="community_NPA">NPA</string>
    <string name="community_City">City</string>
    <string name="community_Country">Country</string>
    <string name="community_image_attachement">image attachment</string>
    <string name="community_gallery">Choose from gallery</string>
    <string name="community_create_BTN">Create community</string>

    <string name="community_title_selected">Community: </string>

    <!-- activity activity layout -->

    <string name="activity_title">Title</string>
    <string name="activity_description">Description</string>
    <string name="activity_min_user_required">Min part.</string>
    <string name="activity_max_user_allowed">Maxi part.</string>
    <string name="activity_creation_date">Creation date</string>
    <string name="activity_deadline_participation">Deadline participation</string>
    <string name="activity_event_date">Event date</string>
    <string name="activity_create_BTN">Create activity</string>

    <string name="nbOfContributor">Number of contributors :</string>
    <string name="AdminName">Admin :</string>
    <string name="Subscribe">Join this activity</string>


    <string name="AppEngineTest">AppEngineTest</string>
    <string name="action_signOut">Sign Out</string>
    <string name="UP_IMG">Upload done</string>
    <string name="UPLOADING">Uploading.... please wait.</string>
    <string name="camera">Take picture</string>
    <string name="FalseMail">False actual mail!</string>
    <string name="newMail">Email address is updated. Please sign in with new email!</string>
    <string name="failUpEmail">Failed to update email!</string>
    <string name="community_title">Title community</string>

    <string name="community_subscribe">Subscribe to community</string>
    <string name="AddressChange">New address saved!</string>
    <string name="title_activity_maps">Map</string>
    <string name="community_unsubscribe">Unsubscribe</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="profil">Profil</string>
    <string name="activity_unsubscribe">Unsubscribe</string>
    <string name="activity_communities">New Activity</string>
    <string name="activitiesOfCommunities">Activities of Community</string>
    <string name="newActivity">New activity</string>
    <string name="newCommunitiy">New community</string>
    <string name="NewCommunityActivity">New community\'s activity</string>
    <string name="selected_activity">Selected activity</string>
    <string name="selected_communauty">Selected community</string>
    <string name="chat">\"Chat\"</string>
    <string name="sendChat">Send message</string>
</resources>
