<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fulltopia.fulltopia.New_activity">

    <EditText
        android:id="@+id/ET_activity_title"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_title"
        tools:layout_editor_absoluteX="8dp"/>

    <EditText
        android:id="@+id/ET_activity_event_date"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_event_date"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_title"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="63dp" />

    <EditText
        android:id="@+id/ET_activity_deadline_participation"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_deadline_participation"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_event_date"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="63dp" />

    <EditText
        android:id="@+id/ET_activity_adress"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/community_address"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_deadline_participation"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/ET_activity_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/community_City"
        app:layout_constraintLeft_toRightOf="@+id/ET_activity_adress"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_deadline_participation" />

    <EditText
        android:id="@+id/ET_activity_NPA"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/community_NPA"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_adress"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/ET_Activity_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/community_Country"
        app:layout_constraintLeft_toRightOf="@+id/ET_activity_NPA"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_city"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_activity_min_req_part"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/activity_min_user_required"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_NPA"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_Activity_max_amount_part"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/activity_max_user_allowed"
        app:layout_constraintLeft_toRightOf="@+id/ET_activity_min_req_part"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_NPA"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_activity_description"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/community_description"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_min_req_part"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/ET_activity_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_image_attachement"
        tools:layout_editor_absoluteX="31dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_description" />

    <Button
        android:id="@+id/BTN_activity_Gallery"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:text="@string/community_gallery"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/BTN_activity_Camera" />

    <Button
        android:id="@+id/BTN_activity_Camera"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_image"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/IMGW_activity_image"
        android:layout_width="128dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_activity_description"
        app:layout_constraintLeft_toRightOf="@+id/BTN_activity_Gallery"
        android:layout_marginLeft="59dp" />

    <Button
        android:id="@+id/BTN_activity_create"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/activity_create_BTN"
        app:layout_constraintTop_toBottomOf="@+id/IMGW_activity_image"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/BTN_Activity_Return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/BTN_return"
        app:layout_constraintLeft_toRightOf="@+id/BTN_activity_create"
        tools:layout_editor_absoluteY="503dp"
        android:layout_marginLeft="65dp" />


</android.support.constraint.ConstraintLayout>
