<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fulltopia.fulltopia.ActivitiesActivities.NewCommunityactivity">

    <EditText
        android:id="@+id/ET_communityactivity_title"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_title"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/ET_communityactivity_eventdate"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_event_date"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_title"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/ET_communityactivity_deadline"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_deadline_participation"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_eventdate" />

    <EditText
        android:id="@+id/ET_communityactivity_address"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/community_address"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_deadline"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/ET_communityactivity_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:hint="@string/community_City"
        app:layout_constraintLeft_toRightOf="@+id/ET_communityactivity_address"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_deadline" />

    <EditText
        android:id="@+id/ET_communityactivity_NPA"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/community_NPA"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_address" />

    <EditText
        android:id="@+id/ET_communityactivity_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:hint="@string/community_Country"
        app:layout_constraintLeft_toRightOf="@+id/ET_communityactivity_NPA"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_city" />

    <EditText
        android:id="@+id/ET_communityactivity_MinPart"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_min_user_required"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_NPA" />

    <EditText
        android:id="@+id/ET_communityactivity_MaxPart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:hint="@string/activity_max_user_allowed"
        app:layout_constraintLeft_toRightOf="@+id/ET_communityactivity_MinPart"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_country" />

    <EditText
        android:id="@+id/ET_communityactivity_description"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/community_description"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_MaxPart"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/BTN_communityactivity_CreateActivity"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/activity_create_BTN"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_description" />

    <Button
        android:id="@+id/BTN_communityactivity_Return"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="43dp"
        android:text="@string/BTN_return"
        app:layout_constraintLeft_toRightOf="@+id/BTN_communityactivity_CreateActivity"
        app:layout_constraintTop_toBottomOf="@+id/ET_communityactivity_description" />
</android.support.constraint.ConstraintLayout>
