<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fulltopia.fulltopia.ActivitiesActivities.Selected_activity">

    <TextView
        android:id="@+id/TV_Admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AdminName"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_TitleActivity"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_AdminName"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/TV_Admin"
        app:layout_constraintTop_toBottomOf="@+id/TV_TitleActivity" />

    <TextView
        android:id="@+id/TV_TitleActivity"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:textAllCaps="false"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/TV_Event_Date"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_event_date"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Admin"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_Deadline"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_deadline_participation"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Event_Date"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_Address"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Address"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Deadline"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_City"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/City"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/TV_Address"
        app:layout_constraintTop_toBottomOf="@+id/TV_Deadline" />

    <TextView
        android:id="@+id/TV_NPA"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/NPA"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Address"
        app:layout_constraintRight_toLeftOf="@+id/TV_City"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp" />

    <TextView
        android:id="@+id/TV_Country"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/Country"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/TV_NPA"
        app:layout_constraintTop_toBottomOf="@+id/TV_City" />

    <TextView
        android:id="@+id/TV_Contributor"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nbOfContributor"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_NPA"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_Description"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_description"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Contributor"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TV_NBRContributor"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/TV_Contributor"
        app:layout_constraintTop_toBottomOf="@+id/TV_Country" />

    <ImageView
        android:id="@+id/IMGV_Activity_Image"
        android:layout_width="151dp"
        android:layout_height="154dp"
        tools:layout_editor_absoluteX="117dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Description"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/BTN_Subscribe"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BTN_Subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subscribe"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="509dp" />

</android.support.constraint.ConstraintLayout>
