<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fulltopia.fulltopia.SettingsActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/BTN_GoToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="goSettings"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/TV_Welcome"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="32dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_GoToSettings" />

    <Button
        android:id="@+id/BTN_GoToActivties"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:text="@string/Activities"
        android:onClick="goActivities"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/TV_Welcome"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="43dp" />

    <Button
        android:id="@+id/BTN_GoToCommunities"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:text="@string/Communities"
        android:onClick="goCommunities"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/BTN_GoToActivties"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="43dp" />

</android.support.constraint.ConstraintLayout>
